<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/back"
    >
    <!--    tools:context根据实际情况设置-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/two"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:paddingRight="12dp"
            android:src="@drawable/two1_1" />

        <ImageView
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/name" />


        <ImageView
            android:id="@+id/three"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:paddingLeft="20dp"
            android:src="@drawable/three1_1" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/AcNumber"
            android:gravity="center"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/et_username"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginHorizontal="15dp"
            android:inputType="text"
            android:hint="@string/Account_number"
            android:background="#00000000"
            >
        </EditText>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="@color/color_link" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="15dp"
            android:text="@string/pwd"
            android:gravity="center"
            android:textSize="17dp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:hint="@string/Password"
            android:background="#00000000"
            >

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/back">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_style"
            android:text="@string/register"
            android:textColor="@color/text">

        </Button>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_style"
            android:text="@string/login"
            android:textColor="@color/text"
            android:enabled="false">

        </Button>
    </LinearLayout>

</LinearLayout>