<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CommodietDetailActivity"
    android:orientation="vertical"
    android:background="#ebebeb">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:background="@color/padding"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:elevation="10px">

        <TextView
            android:id="@+id/tv_return"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:clickable="true"
            android:gravity="center_vertical"
            android:text="@string/goback"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:drawableStartCompat="@drawable/ic_baseline_navigate_before_24" />

        <TextView
            android:id="@+id/shuaxin_detail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:gravity="end|center_vertical"
            android:paddingEnd="10dp"
            android:text="@string/shuaxin"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </RelativeLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/commodityfrom"
                        android:textColor="@color/text_main"
                        android:gravity="center_vertical"
                        android:paddingStart="20sp"/>
                    <TextView
                        android:id="@+id/detail_yonghuming"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:gravity="center_vertical"
                        android:textColor="@color/text_main"
                        android:layout_marginLeft="10sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35sp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/detail_create_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textColor="@color/text_main1"
                        android:layout_marginStart="20sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=" | 发布于 "
                        android:textColor="@color/text_main1"/>

                    <TextView
                        android:id="@+id/detail_address"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text=""
                        android:textColor="@color/text_main1"/>
                </LinearLayout>

                <View
                    android:layout_marginBottom="10sp"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:background="@color/text_main1"/>

                <TextView
                    android:id="@+id/detail_price"
                    android:layout_marginStart="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:text=""
                    android:textColor="@color/colo_red"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_marginStart="20sp"

                    android:id="@+id/detail_commodity_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="17sp"
                    android:textColor="@color/text_main"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_marginTop="20sp"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_marginBottom="10sp"
                        android:id="@+id/detail_picture"
                        android:layout_width="200sp"
                        android:layout_height="200sp"
                        android:scaleType="fitCenter"/>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="3sp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/test1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20sp"
                        android:gravity="start|center_vertical"
                        android:text="留言"
                        android:textColor="@color/text_main" />

                    <TextView
                        android:id="@+id/comment_submit"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:layout_toRightOf="@+id/test1"
                        android:clickable="true"
                        android:gravity="end|center_vertical"
                        android:text="发表评论"
                        android:textColor="@color/text_main"
                        android:textStyle="bold" />

                </RelativeLayout>


                <LinearLayout
                    android:id="@+id/ll_pinglun"
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_style"
        android:orientation="horizontal">

        <Button
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:text="发表评论"
            android:textColor="@color/white"
            android:background="@drawable/btn_style_1"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/btn_buy"/>
        <Button
            android:id="@+id/btn_buy"
            android:layout_width="100sp"
            android:layout_height="40sp"
            android:text="立即购买"
            android:textColor="@color/white"
            android:layout_centerVertical="true"
            android:background="@drawable/btn_style_2"
            android:layout_marginRight="10sp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

</RelativeLayout>